@@ -3,6 +3,8 @@ What's New in IDLE 1.1a0?
 
 *Release date: XX-XXX-2004*
 
+- Add a highlight theme for builtin keywords.  Python Patch 805830 Nigel Rowe
+
 - rpc.py:SocketIO - Large modules were generating large pickles when downloaded
   to the execution server.  The return of the OK response from the subprocess
   initialization was interfering and causing the sending socket to be not
